Add complex types runtime instantiation