@@ -1,5 +1,3 @@
-import org.graalvm.polyglot.Context
-
 plugins {
     id('java')
     id "com.github.johnrengelman.shadow" version "7.1.2"
@@ -34,6 +32,7 @@ test {
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.profiles=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.frame=ALL-UNNAMED',
             '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.interop=ALL-UNNAMED',
+            '--add-exports', 'org.graalvm.truffle/com.oracle.truffle.api.staticobject=ALL-UNNAMED',
             "-Dtruffle.class.path.append=" + sourceSets.main.java.classesDirectory.get().asFile,
             "-Dgraalvm.locatorDisabled=true"
     ]
